# spring-vs-fastapi-redis

./: .gitignore  README.md  docker-compose.yaml  locustfile_fastapi.py  locustfile_spring.py
fast-api-redis/: Dockerfile  docker-compose.yml  pyproject.toml
fast-api-redis/app/: main.py
fast-api-redis/docker/: gunicorn_conf.py
fast-api-redis/redis_service/: redis_service.py
fast-api-redis/registry/: service.py
spring-redis/: docker-compose.yaml  pom.xml
spring-redis/src/main/java/com/example/redistest/config/: RedisConfig.java
spring-redis/src/main/java/com/example/redistest/controller/: RedisSpringDataController.java  RedisTemplateController.java
spring-redis/src/main/java/com/example/redistest/repo/: KeyValue.java  KeyValueRepository.java
spring-redis/src/main/java/com/example/redistest/service/: RedisService.java  RedisSpringDataService.java  RedisTemplateService.java
spring-redis/src/main/java/com/example/redistest/utils/: RedisTestUtils.java
spring-redis/src/main/resources/: application.properties
spring-redis/src/test/java/com/example/redistest/repo/: RepoTest.java
