[tool.poetry]
name = "fast-api-redis"
version = "0.1.0"
description = ""
authors = ["Miguel Fagundez <miguel.fagundez@glovoapp.com>"]

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
pytest = "^5.4.1"
requests = "^2.23.0"
redis-py-cluster = "^2.1.3"
aioredis-cluster = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
